Commit from LXDE Pootle server by user JSonic.: 379 of 379 strings translated (0 fuzzy).

--- a/po/fi.po
+++ b/po/fi.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-09-03 12:04+0300\n"
-"PO-Revision-Date: 2013-09-03 12:51+0000\n"
+"PO-Revision-Date: 2013-09-03 12:55+0000\n"
 "Last-Translator: Juhani <juhaninumminen0@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: fi\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1378212663.0\n"
+"X-POOTLE-MTIME: 1378212901.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:6
 msgid "Preferred Applications"
@@ -362,7 +362,7 @@ msgstr "Valitse päiväys kalenterista"
 
 #: ../data/ui/filesearch.glade.h:14
 msgid "File _Type"
-msgstr "<b>_Tiedostotyyppi:</b>"
+msgstr "_Tiedostotyyppi:"
 
 #: ../data/ui/filesearch.glade.h:15 ../src/base/fm-utils.c:148
 msgid "GB"
