--- a/po/fi.po
+++ b/po/fi.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-09-03 12:04+0300\n"
-"PO-Revision-Date: 2013-09-03 12:55+0000\n"
+"PO-Revision-Date: 2013-09-03 12:59+0000\n"
 "Last-Translator: Juhani <juhaninumminen0@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: fi\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1378212901.0\n"
+"X-POOTLE-MTIME: 1378213187.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:6
 msgid "Preferred Applications"
@@ -511,7 +511,7 @@ msgstr "Virheellinen työpöytäkäynnistin: ”%s”"
 #: ../src/base/fm-file-launcher.c:197
 #, c-format
 msgid "No default application is set to launch URIs %s://"
-msgstr "URI-tyypille %s:// ei ole asetettu oletussovellusta"
+msgstr "URI:lle%s:// ei ole asetettu oletussovellusta"
 
 #: ../src/base/fm-file-launcher.c:272
 #, c-format
